Style : summary Detail cardView 스타일 적용

--- a/app/src/main/res/drawable/border_search.xml
+++ b/app/src/main/res/drawable/border_search.xml
@@ -12,7 +12,7 @@
             />
         <path
             android:pathData="M0 0V30H279V0"
-            android:fillColor="#000000"
+            android:fillColor="#FFFFFF"
             />
     </group>
 </vector>
