--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,5 +20,6 @@
     <color name="text_green">#2ca332</color>
     <color name="text_black">#000000</color>
     <color name="text_gray">#7f7f7f</color>
+    <color name="text_blue">#477ed6</color>
 
 </resources>
