--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -162,7 +162,7 @@
                                 android:gravity="center"
                                 android:maxLines="2"
                                 android:textColor="@color/text_black"
-                                android:textSize="16sp"
+                                android:textSize="20dp"
                                 android:textStyle="bold"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
