--- a/app/src/main/res/layout/nutrition_progress_view.xml
+++ b/app/src/main/res/layout/nutrition_progress_view.xml
@@ -34,7 +34,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/calroie"
@@ -43,6 +44,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginBottom="10dp"
             android:text="칼로리"
+            android:textColor="@color/text_black"
             app:layout_constraintBottom_toTopOf="@+id/calorieProgressBar"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -68,6 +70,7 @@
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="10dp"
             android:text='@{currentCalories + " / " + targetCalories + " kcal"}'
+            android:textColor="@color/text_black"
             app:layout_constraintBottom_toTopOf="@+id/calorieProgressBar"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -78,6 +81,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginBottom="10dp"
             android:text="탄수화물"
+            android:textColor="@color/text_black"
             app:layout_constraintBottom_toTopOf="@+id/carbProgressBar"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -103,6 +107,7 @@
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="10dp"
             android:text='@{currentCarbIntake + " / " + targetCarbIntake + " g"}'
+            android:textColor="@color/text_black"
             app:layout_constraintBottom_toTopOf="@+id/carbProgressBar"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -113,6 +118,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginBottom="10dp"
             android:text="단백질"
+            android:textColor="@color/text_black"
             app:layout_constraintBottom_toTopOf="@+id/proteinProgressBar"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -138,6 +144,7 @@
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="10dp"
             android:text='@{currentProteinIntake + " / " + targetProteinIntake + " g"}'
+            android:textColor="@color/text_black"
             app:layout_constraintBottom_toTopOf="@+id/proteinProgressBar"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -148,6 +155,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginBottom="10dp"
             android:text="지방"
+            android:textColor="@color/text_black"
             app:layout_constraintBottom_toTopOf="@+id/fatProgressBar"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -173,6 +181,7 @@
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="10dp"
             android:text='@{currentFatIntake + " / " + targetFatIntake + " g"}'
+            android:textColor="@color/text_black"
             app:layout_constraintBottom_toTopOf="@+id/fatProgressBar"
             app:layout_constraintEnd_toEndOf="parent" />
 
