Feat : Dialog 추가 및 예외처리

--- a/app/src/main/res/layout/fragment_custom_add.xml
+++ b/app/src/main/res/layout/fragment_custom_add.xml
@@ -57,7 +57,7 @@
             android:background="@drawable/border_section_white"
             android:ems="10"
             android:gravity="center"
-            android:inputType="text"
+            android:inputType="number"
             app:layout_constraintBottom_toTopOf="@+id/view5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.701"
@@ -81,6 +81,8 @@
             android:layout_marginTop="30dp"
             android:background="@drawable/border_section_white"
             android:ems="10"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:gravity="center"
             android:inputType="text"
             android:text="g"
@@ -108,7 +110,7 @@
             android:background="@drawable/border_section_white"
             android:ems="10"
             android:gravity="center"
-            android:inputType="text"
+            android:inputType="number"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.7"
             app:layout_constraintStart_toStartOf="parent"
@@ -133,7 +135,7 @@
             android:background="@drawable/border_section_white"
             android:ems="10"
             android:gravity="center"
-            android:inputType="text"
+            android:inputType="number"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.7"
             app:layout_constraintStart_toStartOf="parent"
@@ -158,7 +160,7 @@
             android:background="@drawable/border_section_white"
             android:ems="10"
             android:gravity="center"
-            android:inputType="text"
+            android:inputType="number"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.7"
             app:layout_constraintStart_toStartOf="parent"
@@ -183,7 +185,7 @@
             android:background="@drawable/border_section_white"
             android:ems="10"
             android:gravity="center"
-            android:inputType="text"
+            android:inputType="number"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.7"
             app:layout_constraintStart_toStartOf="parent"
