Feat : FoodDetail 예외처리

--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -84,7 +84,7 @@
                 android:background="@drawable/border_section_white"
                 android:ems="10"
                 android:gravity="center"
-                android:inputType="text"
+                android:inputType="number"
                 android:text="@={viewModel.totalContent}"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/unit"
