--- a/app/src/main/res/layout/fragment_custom_add.xml
+++ b/app/src/main/res/layout/fragment_custom_add.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             android:text="이름"
+            android:textColor="@color/text_black"
             app:layout_constraintBottom_toTopOf="@+id/textView15"
             app:layout_constraintEnd_toStartOf="@+id/inputName"
             app:layout_constraintHorizontal_bias="0.318"
@@ -34,6 +35,7 @@
             android:ems="10"
             android:gravity="center"
             android:inputType="text"
+            android:textColor="@color/text_black"
             app:layout_constraintBottom_toTopOf="@+id/inputServingSize"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.701"
@@ -45,6 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             android:text="기본 제공량"
+            android:textColor="@color/text_black"
             app:layout_constraintBottom_toTopOf="@+id/view5"
             app:layout_constraintEnd_toStartOf="@+id/inputServingSize"
             app:layout_constraintStart_toStartOf="parent" />
@@ -58,6 +61,7 @@
             android:ems="10"
             android:gravity="center"
             android:inputType="number"
+            android:textColor="@color/text_black"
             app:layout_constraintBottom_toTopOf="@+id/view5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.701"
@@ -69,6 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
             android:text="단위"
+            android:textColor="@color/text_black"
             app:layout_constraintEnd_toStartOf="@+id/editTextText2"
             app:layout_constraintHorizontal_bias="0.318"
             app:layout_constraintStart_toStartOf="parent"
@@ -86,6 +91,7 @@
             android:gravity="center"
             android:inputType="text"
             android:text="g"
+            android:textColor="@color/text_gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.7"
             app:layout_constraintStart_toStartOf="parent"
@@ -97,6 +103,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="88dp"
             android:text="열량"
+            android:textColor="@color/text_black"
             app:layout_constraintEnd_toStartOf="@+id/editTextText2"
             app:layout_constraintHorizontal_bias="0.318"
             app:layout_constraintStart_toStartOf="parent"
@@ -111,6 +118,7 @@
             android:ems="10"
             android:gravity="center"
             android:inputType="number"
+            android:textColor="@color/text_black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.7"
             app:layout_constraintStart_toStartOf="parent"
@@ -122,6 +130,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:text="탄수화물"
+            android:textColor="@color/text_black"
             app:layout_constraintEnd_toStartOf="@+id/inputCarb"
             app:layout_constraintHorizontal_bias="0.411"
             app:layout_constraintStart_toStartOf="parent"
@@ -136,6 +145,7 @@
             android:ems="10"
             android:gravity="center"
             android:inputType="number"
+            android:textColor="@color/text_black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.7"
             app:layout_constraintStart_toStartOf="parent"
@@ -147,6 +157,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:text="단백질"
+            android:textColor="@color/text_black"
             app:layout_constraintEnd_toStartOf="@+id/inputProtein"
             app:layout_constraintHorizontal_bias="0.362"
             app:layout_constraintStart_toStartOf="parent"
@@ -161,6 +172,7 @@
             android:ems="10"
             android:gravity="center"
             android:inputType="number"
+            android:textColor="@color/text_black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.7"
             app:layout_constraintStart_toStartOf="parent"
@@ -172,6 +184,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:text="지방"
+            android:textColor="@color/text_black"
             app:layout_constraintEnd_toStartOf="@+id/inputFat"
             app:layout_constraintHorizontal_bias="0.321"
             app:layout_constraintStart_toStartOf="parent"
@@ -186,6 +199,7 @@
             android:ems="10"
             android:gravity="center"
             android:inputType="number"
+            android:textColor="@color/text_black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.7"
             app:layout_constraintStart_toStartOf="parent"
@@ -198,8 +212,9 @@
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="30dp"
-            android:background="@color/light_green"
+            android:background="@drawable/border_section_light_green"
             android:text="저장하기"
+            android:textColor="@color/text_black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
