--- a/app/src/main/res/layout/fragment_diet.xml
+++ b/app/src/main/res/layout/fragment_diet.xml
@@ -78,7 +78,7 @@
 
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/micBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
